Fixed issue where footer would overflow content in Overview page. Fixed issue where images were taking long to load for View Recipe and Add Recipe pages.

--- a/client/src/pages/ViewRecipe/ViewRecipe.css
+++ b/client/src/pages/ViewRecipe/ViewRecipe.css
@@ -1,6 +1,6 @@
 
 .viewRecipeBackground{
-    background-image: url("../../images/hoppy.png");
+    background-image: url("../../images/hoppy.jpg");
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
